== 0.3.4 (In Git)

Hooray - speed improvements when using Rake!

=== Bugfixes
* Problem with multiple terms in languages.yml (#321 Aslak Hellesøy)

=== New features
* Support for Vietnamese (Ngoc Dao)
* Added aliases for Feature and But in Japanese (Leonard Chin)
* Support for Catalan (Francesc Esplugas)

=== Changed features
* Rake task should not shell out (#297 Aslak Hellesøy)
  The Cucumber Rake task will run Cucumber in the same Ruby interpreter as Rake itself
  unless explicitly told to fork a new interpreter. This is to increase speed. You can
  force a new interpreter by setting fork=true or rcov=true in the task.

== 0.3.3 2009-05-10

Minor bugfix release, made specially for EuRuKo!

=== Bugfixes
* Summaries are no longer printed in an empty () if there are no scenarios/steps (Aslak Hellesøy)
* Background, Scenario Outline, Before Hook interaction (#309 Aslak Hellesøy)
* Multiline String snippets no longer give misleading info. It's a String, not a PyString that's sent to step def.

=== Removed/changed features
* New aliases: --no-source/-s, --name/-n (#317 Lonnon Foster)

== 0.3.2 2009-05-05

This release has some minor bug fixes and new features.
Nothing major, but we need a release for RailsConf'09 in Las Vegas!

=== Bugfixes
* rake tasks with profiles not respecting --require flags (#311 Ben Mabey)
* Step table with blank cell fails (#308 JohnnyT)
* Fixed error where unused table cells in Examples where raising exceptions due to having no status (#302 Joseph Wilk)

=== New features
* Support for Hebrew (Ido Kanner)
* Summary should report scenarios (#32 Aslak Hellesøy)
* Examples and the associated tables are indented one level deeper than Scenario Outline. (Aslak Hellesøy)
* Added support for Examples selection when using --name. (#295 Joseph Wilk)

== 0.3.1 2009-04-26

This release has several minor bug fixes and new features. With the addition of Latvian and Hungarian Cucumber
now supports 32(!!) languages.

=== New features