@@ -1,3 +1,5 @@
+require 'tempfile'
+
 Given /^I am in (.*)$/ do |example_dir_relative_path|
   @current_dir = examples_dir(example_dir_relative_path)
 end
@@ -12,7 +14,7 @@ end
 
 Given /^the (.*) directory is empty$/ do |directory|
   in_current_dir do
-    FileUtils.remove_dir directory
+    FileUtils.remove_dir(directory) rescue nil
     FileUtils.mkdir 'tmp'
   end
 end
@@ -58,6 +60,18 @@ end
 
 Then /^the output should not contain$/ do |text|
   last_stdout.should_not include(text)
+end
+
+# http://diffxml.sourceforge.net/
+Then /^"(.*)" should contain XML$/ do |file, xml|
+  t = Tempfile.new('cucumber-junit')
+  t.write(xml)
+  t.flush
+  t.close
+  diff = `diffxml #{t.path} #{file}`
+  if diff =~ /<delta>/m
+    raise diff + "\nXML WAS:\n" + IO.read(file)
+  end
 end
 
 Then /^"(.*)" should contain$/ do |file, text|
