@@ -66,16 +66,12 @@ module Cucumber
             @options[:formats][v] = @out_stream
             @active_format = v
           end
-          opts.on("-o", "--out FILE",
-            "Write output to a file instead of STDOUT. This option",
+          opts.on("-o", "--out [FILE|DIR]",
+            "Write output to a file/directory instead of STDOUT. This option",
             "applies to the previously specified --format, or the",
-            "default format if no format is specified.") do |v|
+            "default format if no format is specified. Check the specific",
+            "formatter's docs to see whether to pass a file or a dir.") do |v|
             @options[:formats][@active_format] = v
-          end
-          opts.on("--reportdir DIR",
-            "Write output files to DIR. This option only applies",
-            " if the previous --format option was junit.") do |v|
-            @options[:reportdir] = v
           end
           opts.on("-t TAGS", "--tags TAGS",
             "Only execute the features or scenarios with the specified tags.",
@@ -203,10 +199,12 @@ module Cucumber
         return Formatter::Pretty.new(step_mother, nil, @options) if @options[:autoformat]
         formatters = @options[:formats].map do |format, out|
           if String === out # file name
-            out = File.open(out, Cucumber.file_mode('w'))
-            at_exit do
-              out.flush
-              out.close
+            unless File.directory?(out)
+              out = File.open(out, Cucumber.file_mode('w'))
+              at_exit do
+                out.flush
+                out.close
+              end
             end
           end
 
@@ -214,7 +212,7 @@ module Cucumber
             formatter_class = formatter_class(format)
             formatter_class.new(step_mother, out, @options)
           rescue Exception => e
-            e.message += "\nError creating formatter: #{format}"
+            e.message << "\nError creating formatter: #{format}"
             raise e
           end
         end
